scrolling on mobile & fixing css on build

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ main {
 }
 
 section {
-  @apply max-w-5xl mx-auto;
+  @apply mx-auto max-w-5xl;
 }
 
 .snap {
@@ -50,11 +50,11 @@ html h1 {
 }
 
 html h2 {
-  @apply font-bold text-3xl text-white;
+  @apply text-3xl font-bold text-white;
 }
 
 html h3 {
-  @apply font-semibold text-2xl text-white;
+  @apply text-2xl font-semibold text-white;
 }
 
 html p {
@@ -94,7 +94,7 @@ html p {
 }
 
 .outline-container {
-  @apply outline outline-offset-8 outline-1 outline-[currentColor] transition-all;
+  @apply outline outline-1 outline-offset-8 outline-[currentColor] transition-all;
 }
 
 /* 
@@ -116,4 +116,9 @@ div {
   bottom: 0;
   right: 0;
   scroll-snap-align: start;
+}
+
+canvas,
+div {
+  touch-action: auto !important;
 }
